Environment map doesn't update #43514

Closed
opened 2015-02-01 14:42:44 +01:00 by Thomas Szepe · 5 comments
Member

Blender Version
Broken: (all, tested down to 2.53)
Worked: (none, tested up to 2.73a)

Short description of error
If you switch an environment map texture to an other the material will not update.
The only ways to update the material is to close and reopen Blender or switch environment source from "Image File" to an other source and back.
Environment_map_bug.png

Exact steps for others to reproduce the error
Open the blend file and change to the other Cubemap_384x256 texture.
environment_map_bug.blend

**Blender Version** Broken: (all, tested down to 2.53) Worked: (none, tested up to 2.73a) **Short description of error** If you switch an environment map texture to an other the material will not update. The only ways to update the material is to close and reopen Blender or switch environment source from "Image File" to an other source and back. ![Environment_map_bug.png](https://archive.blender.org/developer/F140255/Environment_map_bug.png) **Exact steps for others to reproduce the error** Open the blend file and change to the other Cubemap_384x256 texture. [environment_map_bug.blend](https://archive.blender.org/developer/F140254/environment_map_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @hg1

Added subscriber: @hg1

This issue was referenced by 8186214c39

This issue was referenced by 8186214c390e91d20dd78fbee345e668c3364c71

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8186214c39.

Closed by commit 8186214c39.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43514
No description provided.