Fix T43514: Environment map doesn't update